--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "breakpoints",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Sass mixin for breakpoints",
   "repository": {
     "type": "git",
@@ -14,6 +14,8 @@
   "homepage": "",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.2.0"
+    "gulp-sass": "^2.2.0",
+    "gulp-shopify-sass": "^0.1.2",
+    "vinyl-file": "^2.0.0"
   }
 }
