--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "breakpoints",
-  "version": "0.0.2",
+  "name": "rs-breakpoints",
+  "version": "0.0.3",
   "description": "Sass mixin for breakpoints",
+  "main": "index.scss",
   "repository": {
     "type": "git",
     "url": "https://github.com/RazvanDH/breakpoints.git"
