--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
     "gulp-shopify-sass": "^0.4.1",
     "vinyl-file": "^3.0.0"
